--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,11 @@
 <html>
+
 <head>
-    <title>Barebones Typescript/React/Express</title>
+    <title>Registration Software</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
@@ -11,4 +13,5 @@
     <div id="root"></div>
     <script src="/js/app.js"></script>
 </body>
+
 </html>
